--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular2-material/slide-toggle": "^2.0.0-alpha.8-2",
     "@angular2-material/tabs": "^2.0.0-alpha.8-2",
     "@angular2-material/toolbar": "^2.0.0-alpha.8-2",
+    "angular2-notifications": "^0.4.53",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
