--- a/package.json
+++ b/package.json
@@ -18,23 +18,10 @@
     "@angular/core": "~2.4.0",
     "@angular/forms": "~2.4.0",
     "@angular/http": "~2.4.0",
+    "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
-    "@angular2-material/button": "^2.0.0-alpha.8-2",
-    "@angular2-material/card": "^2.0.0-alpha.8-2",
-    "@angular2-material/checkbox": "^2.0.0-alpha.8-2",
-    "@angular2-material/core": "^2.0.0-alpha.8-2",
-    "@angular2-material/grid-list": "^2.0.0-alpha.8-2",
-    "@angular2-material/icon": "^2.0.0-alpha.8-2",
-    "@angular2-material/input": "^2.0.0-alpha.8-2",
-    "@angular2-material/list": "^2.0.0-alpha.8-2",
-    "@angular2-material/menu": "^2.0.0-alpha.8-2",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.8-2",
-    "@angular2-material/radio": "^2.0.0-alpha.8-2",
-    "@angular2-material/slide-toggle": "^2.0.0-alpha.8-2",
-    "@angular2-material/tabs": "^2.0.0-alpha.8-2",
-    "@angular2-material/toolbar": "^2.0.0-alpha.8-2",
     "angular2-notifications": "^0.4.53",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
