--- a/package.json
+++ b/package.json
@@ -12,37 +12,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/compiler-cli": "^2.4.7",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
-    "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
+    "@angular/common": "^2.4.10",
+    "@angular/compiler": "^2.4.10",
+    "@angular/compiler-cli": "^2.4.10",
+    "@angular/core": "^2.4.10",
+    "@angular/forms": "^2.4.10",
+    "@angular/http": "^2.4.10",
+    "@angular/material": "^2.0.0-beta.6",
+    "@angular/platform-browser": "^2.4.10",
+    "@angular/platform-browser-dynamic": "^2.4.10",
+    "@angular/router": "^3.4.10",
     "angular2-notifications": "^0.4.53",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "ng2-bootstrap": "^1.3.3",
-    "ng2-file-upload": "^1.2.0",
-    "rxjs": "^5.1.1",
+    "ng2-bootstrap": "^1.6.3",
+    "ng2-file-upload": "^1.2.1",
+    "rxjs": "^5.4.1",
     "ts-helpers": "^1.1.1",
-    "typescript": "^2.1.6",
-    "webpack": "^2.2.1",
-    "zone.js": "^0.7.2"
+    "typescript": "^2.4.0",
+    "webpack": "^2.6.1",
+    "zone.js": "^0.7.8"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-beta.31",
-    "@types/jasmine": "^2.2.30",
-    "angular-cli": "^1.0.0-beta.14",
+    "@angular/cli": "^1.1.2",
+    "@types/jasmine": "^2.5.52",
+    "angular-cli": "^1.0.0-beta.22-1",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
