--- a/package.json
+++ b/package.json
@@ -12,32 +12,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.4.10",
-    "@angular/compiler-cli": "^2.4.10",
-    "@angular/core": "^2.4.10",
-    "@angular/forms": "^2.4.10",
-    "@angular/http": "^2.4.10",
+    "@angular/animations": "^4.2.2",
+    "@angular/common": "^4.2.2",
+    "@angular/compiler": "^4.2.2",
+    "@angular/compiler-cli": "^4.2.2",
+    "@angular/core": "^4.2.2",
+    "@angular/forms": "^4.2.2",
+    "@angular/http": "^4.2.2",
     "@angular/material": "^2.0.0-beta.6",
-    "@angular/platform-browser": "^2.4.10",
-    "@angular/platform-browser-dynamic": "^2.4.10",
-    "@angular/router": "^3.4.10",
+    "@angular/platform-browser": "^4.2.2",
+    "@angular/platform-browser-dynamic": "^4.2.2",
+    "@angular/platform-server": "^4.2.2",
+    "@angular/router": "^4.2.2",
     "angular2-notifications": "^0.4.53",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "ng2-bootstrap": "^1.6.3",
     "ng2-file-upload": "^1.2.1",
+    "ngx-bootstrap": "^1.7.1",
+    "node-sass": "^4.5.3",
     "rxjs": "^5.4.1",
     "ts-helpers": "^1.1.1",
-    "typescript": "^2.4.0",
+    "typescript": "^2.3.4",
     "webpack": "^2.6.1",
     "zone.js": "^0.7.8"
   },
   "devDependencies": {
     "@angular/cli": "^1.1.2",
     "@types/jasmine": "^2.5.52",
-    "angular-cli": "^1.0.0-beta.22-1",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -46,7 +48,6 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "node-sass": "^3.10.0",
     "protractor": "4.0.5",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
